--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -1,6 +1,11 @@
 body {
 	font-family: helvetica;
 }
+form {
+	background-color: #ccc;
+	padding: 10px;
+	border-radius: 10px;
+}
 .logo {
 	padding: 25px;
 	width: 100px;
@@ -37,7 +42,7 @@ ul {
 	font-size: 24px;
 	transition: .5s;
 }
-.headerLink:hover, button:hover {
+.headerLink:hover .assign:hover button:hover {
 	background-color: #ccc;
 	transition: .5s;
 }
@@ -61,25 +66,46 @@ button {
 p {
 	text-align: left;
 }
-
+.dropdown {
+	text-align: center;
+}
 div {
 	background-color: #eee;
 	border: none;
-	text-align: center;
 	border-radius: 25px;
 	margin: 10px;
 	padding: 25px;
 }
 
 input {
-	display: block;
 	border: none;
+	margin: 10px;
 	cursor: pointer;
 	font-size: 24px;
-	margin: auto;
 	padding: 5px;
 	background-color: #ddd;
 	border-radius: 25px;
+}
+input:focus {
+	outline: 0;
+}
+.radioCheck {
+	height: 25px;
+    width: 25px;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	transition: .5s;
+}
+.radioCheck:checked {
+	border: none;
+	background-color: #000;
+	outline:10px;
+	outline-color: #ddd;
+	transition: .5s;
+}
+.submit {
+	padding: 10px 100px 10px 100px;
 }
 #color {
 	background-color: #fff;
