--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -68,12 +68,15 @@ p {
 	text-align: center;
 }
 div {
-	background-color: #eee;
+	background-	color: #eee;
 	border: none;
 	border-radius: 25px;
 	margin: 10px;
 	padding: 25px;
-	float: left;
+}
+.furnitureItems {
+	width: 25%;
+    float: left;
 }
 
 input {
