--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -71,7 +71,7 @@ p {
 .dropdown {
 	text-align: center;
 	margin: auto;
-	width: 75%;
+    display: inline-block;
 }
 div {
 	background-color: #fff;
