--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -70,8 +70,9 @@ p {
 }
 .dropdown {
 	text-align: center;
-	margin-left: 30px;
-	margin-right: 30px;
+	margin: 10px;
+	margin-left: 100px;
+	margin-right: 100px;
 }
 div {
 	background-color: #fff;
