--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -22,7 +22,7 @@ a {
 	padding: 0px;
 	overflow: hidden;
 	border-radius: 100px;
-	background-color: #fff;
+	background-color: #ccc;
 }
 #hd {
 	float: left;
