--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -94,7 +94,10 @@ input {
 	font-size: 24px;
 	padding: 10px;
 	background-color: #ddd;
-	border-radius: 25px;
+	border-radius: 5px;
+}
+input[type=text] {
+	background-color: #eee;
 }
 input:focus {
 	outline: 0;
