--- a/web/mainStyle.css
+++ b/web/mainStyle.css
@@ -105,7 +105,7 @@ input[type=number] {
 	text-align: center;
 	background-color: #eee;
 }
-input[type=text, password] {
+input[type=text, type=password] {
 	background-color: #eee;
 	border-color: #aaa;
 	border-width: 1px;
